configmap注入和健康检查

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 	<modules>
 		<module>test-user</module>
 		<module>test-order</module>
+		<module>test-config</module>
 	</modules>
 
 	<properties>
