--- a/kubernetes/test.yaml
+++ b/kubernetes/test.yaml
@@ -1,5 +1,4 @@
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
@@ -44,13 +43,12 @@ spec:
       containers:
         - name: order
           image: registry.cn-hangzhou.aliyuncs.com/tskj-faas/test-order:0.0.1-SNAPSHOT
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - containerPort: 8000
           securityContext:
             runAsUser: 1000
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
@@ -95,7 +93,7 @@ spec:
       containers:
         - name: user
           image: registry.cn-hangzhou.aliyuncs.com/tskj-faas/test-user:0.0.1-SNAPSHOT
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - containerPort: 8000
           securityContext:
